finished up create user route
