# application/users-service/api/dto/dto.go
@@ -2,6 +2,28 @@ package dto
 
 type ErrorResponse struct {
 	Message string `json:"message,omitempty"`
-	Reason  string `json:"reason,omitempty"`
+	TraceId string `json:"traceId,omitempty"`
 	Code    string `json:"code,omitempty"`
+}
+
+type CreateUserRequest struct {
+	Username string `json:"username,omitempty"`
+	Email    string `json:"email,omitempty"`
+	Password string `json:"password,omitempty"`
+}
+
+type UpdateUserRequest struct {
+	Username  string `json:"username,omitempty"`
+	Email     string `json:"email,omitempty"`
+	IsEnabled *bool  `json:"isEnabled,omitempty"`
+	Password  string `json:"password,omitempty"`
+}
+
+type UserResponse struct {
+	UserId    string `json:"userId,omitempty"`
+	Username  string `json:"username,omitempty"`
+	Email     string `json:"email,omitempty"`
+	IsEnabled bool   `json:"isEnabled,omitempty"`
+	CreatedAt string `json:"createdAt,omitempty"`
+	UpdatedAt string `json:"updatedAt,omitempty"`
 }
